<resources>
    <string name="app_name">Edge of the Empire Character Creator</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_test">test</string>
    <string name="title_activity_species_selection">EotE Character Creator</string>

    <!-- Species Selection -->
    <string name="character_name">CHARACTER NAME</string>
    <string name="human_race">Human</string>
    <string name="to_main">MAIN</string>
    <string name="to_background">BACKGROUND</string>
    <string name="desc">description:</string>

    <!-- Career Selection -->
    <string name="bounty_hunter_desc">
        - Feared, reviled—and in great demand throughout the Galaxy\n
        - Often in service to some guild, though some prefer to work independent\n
        - Ruthless assassins, versatile gadgeteers, and cunning survivalists
    </string>
    <string name="smuggler_desc">
        - Often seen as the freest beings in the galaxy, though that freedom is often an illusion\n
        - Know their way around the underworld and fringe society\n
        - Bold pilots, dashing scoundrels, and daring thieves
    </string>
    <string name="technician_desc">
        - Can operate, repair, and upgrade practically anything with power and gears\n
        - Most would rather deal with machines than people: the latter are too unpredictable\n
        - Tough mechanics, creative outlaw techs, and brilliant slicers

    </string>


    <!-- Spending XP -->
    <string name="explain_xp">
        Increasing an attribute score (BRAWN, AGILITY, INTELLECT, CUNNING, WILLPOWER, or PRESENCE) costs 10*(your current score + 1) xp.\n\n
        Increasing a career skill (bolded) costs 5*(your current skill rank + 1) xp.\n\n
        Increasing a non-career skill costs 5*(your current skill rank + 2) xp.\n\n
        Your current skill rank is represented by green triangles.\n
    </string>
    <string name="explain_wound">
        Wound threshold: determines how much physical damage your character can withstand before they are knocked out.
        Increased by Brawn.
    </string>
    <string name="explain_strain">
        Strain threshold: determines how much psychological or mental damage your character can withstand before they are stunned, dazed or incapacitated.
        Increased by Willpower.
    </string>
    <string name="explain_soak">
        Soak value: determines how much damage your character can shrug off before being seriously wounded.
        Equal to Brawn rating.
    </string>

    <!-- Character Summary -->
    <string name="dice_text"><u>Edge of the Empire Dice</u></string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
