<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SpeciesSelection">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:theme="@style/AppTheme.AppBarOverlay"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/char_name"
            android:layout_width="match_parent"
            android:inputType="text"
            android:maxLines="1"
            android:layout_height="65dp"
            android:layout_margin="@dimen/fab_margin"
            android:fontFamily="@font/teuton_mager_italic"
            android:maxLength="25"
            android:gravity="center"
            android:hint="@string/character_name"
            android:textSize="42sp" />


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorAccent"
             />

    </android.support.design.widget.AppBarLayout>


    <include layout="@layout/content_species_selection" />

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="95dp"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >
        <ImageView
            android:layout_width="320dp"
            android:layout_height="320dp"
            android:layout_marginTop="25dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/species_img"
            android:scaleType="fitCenter"
            android:src="@drawable/human"/>

        <Button
            android:id="@+id/species_info_btn"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="@dimen/fab_margin"
            android:layout_below="@+id/species_img"
            android:src="@drawable/info_icon"
            android:elevation="8dp"
            android:scaleType="centerCrop"
            android:background="@drawable/info_icon"


            />
        <Button
            android:id="@+id/species_right_btn"
            android:layout_width="60dp"
            android:layout_height="110dp"
            android:elevation="@dimen/fab_margin"
            android:background="@drawable/ic_play_arrow_blue_24dp"
            android:layout_alignEnd="@id/species_img"
            android:layout_marginTop="160dp"/>

        <Button
            android:id="@+id/species_left_btn"
            android:layout_width="60dp"
            android:layout_height="110dp"
            android:elevation="@dimen/fab_margin"
            android:background="@drawable/ic_play_arrow_red_24dp"
            android:scaleX="-1"
            android:layout_alignStart="@id/species_img"
            android:layout_marginTop="160dp"/>

        <TextView
            android:layout_width="320dp"
            android:layout_height="55dp"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_centerHorizontal="true"
            android:background="@color/swBlue"
            android:fontFamily="@font/starjedi_special_edition"
            android:text="@string/human_race"
            android:textColor="@color/white"
            android:gravity="center"
            android:id="@+id/species_text"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:layout_below="@+id/species_img" />



        <LinearLayout
            android:layout_width="fill_parent"
            android:gravity="bottom"
            android:layout_height="100sp"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="55dp">
            <Button
                android:id="@+id/to_main_btn"
                android:layout_weight="1"
                android:layout_marginBottom="8dp"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:scaleType="fitStart"
                android:background="@drawable/arrow_l"
                android:text="@string/to_main"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:fontFamily="@font/teuton_mager"/>
            <Button
                android:id="@+id/to_background_btn"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginBottom="8dp"
                android:scaleType="fitStart"
                android:background="@drawable/arrow_r"
                android:text="@string/to_background"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:fontFamily="@font/teuton_mager"/>
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>


</android.support.design.widget.CoordinatorLayout>