<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:layout_height="wrap_content"
    android:background="@drawable/big_data_pad"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="55dp"
        android:fontFamily="@font/starjedi_special_edition"
        android:text="Spend xp:"
        android:textColor="@color/swRed"
        android:textSize="22dp"
        tools:text="Spend xp:" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_marginRight="50dp"
        android:layout_weight="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/icon3_wound" />

            <TextView
                android:id="@+id/desc_wound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="none"
                android:fontFamily="@font/teuton_mager"
                android:maxLines="100"
                android:scrollbars="vertical"
                android:scrollHorizontally="false"
                android:text="@string/explain_wound"
                android:textColor="@color/yellow"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/icon3_strain" />

            <TextView
                android:id="@+id/desc_strain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="none"
                android:fontFamily="@font/teuton_mager"
                android:maxLines="100"
                android:scrollbars="vertical"
                android:scrollHorizontally="false"
                android:text="@string/explain_strain"
                android:textColor="@color/yellow"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/icon3_soak" />

            <TextView
                android:id="@+id/desc_soak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="none"
                android:fontFamily="@font/teuton_mager"
                android:maxLines="100"
                android:scrollbars="vertical"
                android:scrollHorizontally="false"
                android:text="@string/explain_soak"
                android:textColor="@color/yellow"
                android:textSize="16sp" />
        </TableRow>

    </TableLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginBottom="40dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/back_btn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:elevation="@dimen/fab_margin"
            android:layout_weight="1"
            android:gravity="bottom|start"
            android:scaleX="-1"
            android:background="@drawable/ic_exit_to_app_dorange_24dp" />


        <Button
            android:id="@+id/exit_btn"
            android:layout_width="55dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/ic_exit_custom"
            android:elevation="@dimen/fab_margin"
            android:gravity="bottom|end" />
    </RelativeLayout>


</LinearLayout>